# Asistente-rag-core

./: .gitignore  LICENSE  README.md  README_2026-01-11.md  README_TESTING.md  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
cli/: answer.py  ask.py
data/docs/: Riesgos
docs/: CH04_Benchmark_Retrieval_v2.md  CH06_Benchmark_Negativo_v2.md  CH07_Benchmark_Generativo_v1.md  ROADMAP.md  RUNBOOK_EVAL_WSL.md  SETUP_VSCODE_JUPYTER.md  decisiones_diseno.md  diseno_tecnico_pipeline_de_Ingesta.md  limpieza_normalizacion_documentos_md.md  modelo_documento_chunking.md  pipeline_ingesta_normalizacion_chunking.md  pseudcodigo_completo_de_clean_markdown.md
docs/bench_history/: gold_retrieval_v2_L0.csv  gold_retrieval_v2_L0_1-25.csv
eval/: gold_generative_v1.csv  gold_negative_v1.csv  gold_retrieval_v0.csv  gold_retrieval_v1.csv  gold_retrieval_v2.csv
eval_artifacts/: README.md
eval_artifacts/ch07/: eval_generative_v1.json
notebooks/: 07_build_definiciones_json.ipynb  clean_markdown_sanity.ipynb
tests/: test_clean_markdown.py  test_generator_contract.py  test_index_mapping_smoke.py  test_index_persist_smoke.py  test_ingest_chunk_contract.py  test_ingest_determinism.py  test_ingest_end2end_smoke.py  test_llm_generator_contract.py  test_retrieval_smoke.py
tools/: compare_cleaners.py  eval_generative.py  eval_negative.py  eval_retrieval.py  eval_retrieval_threshold.py  generate_ingest_evidence.py  inspect_retrieval.py  list_imports.py  make_packaging_plots.py  overlap_eval.py  overlap_hit_144.py  report_missing.py
(+63 files in other folders)
